# typst_api_example

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  codebase_structure.md  project_overview.md  suggested_commands.md  task_completion_guidelines.md
benches/: pdf_generation.rs
src/: lib.rs  main.rs
src/routes/: mod.rs
src/templates/: german_invoice.rs  mod.rs
templates/: german_invoice.typ
