[package]
name = "typst_pdf_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
typst = "0.13.1"
typst-kit = "0.13.1"
typst-pdf = "0.13.1"
ureq = "3.0.12"
zune-inflate = "0.2.54"
